orientation layout bug

--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -234,6 +234,9 @@ i.fa
 #projects
   padding 75px 150px 50px 150px
   height 400px
+  transition padding-left .5s
+  &.expanded
+    padding-left 325px
   ul#projects-list
     position relative
     z-index 1001
